<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2007-2008 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->

<resources>
    <string name="app_name">OI Convert CSV</string>
    <string name="convert_csv">Convert CSV</string>
    <string name="convert_csv_notepad">Convert CSV to Notepad</string>
    <string name="convert_csv_shoppinglist">Convert CSV to Shopping list</string>
    <string name="convert_notepad_to_csv">Convert notepad to CSV</string>
    <string name="convert_shoppinglist_to_csv">Convert shopping list to CSV</string>
    <string name="convert_all_notes">Convert all notes</string>
    <string name="convert_all_shoppinglists">Convert all shopping lists</string>
    <string name="file_path">File path</string>
    <string name="file_import">Import</string>
    <string name="file_export">Export</string>
    <string name="error_writing_file">Error writing to file</string>
    <string name="error_reading_file">Error reading to file</string>
    <string name="wrong_csv_format">Wrong CSV format</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_not_yet_implemented">Not yet implemented, please choose different option.</string>
    <string name="import_finished">Import finished</string>
    <string name="export_finished">Export finished</string>
    <string name="filemanager_title_notepad">Select notepad CSV file</string>
    <string name="filemanager_title_shoppinglist">Select shopping list CSV file</string>
	<string name="current_import_policy">Current Import Policy:</string>
	<string name="import_policy">Import Policy</string>
	<string name="select_import_policy">Select the import policy to use</string>
    <!--  <string name="filemanager_buttontext">Export finished</string>  -->
    
    <string name="file_exists">The file exists. Do you want to overwrite?</string>
    <string name="dont_ask_again">Don't ask again. Always overwrite!</string>
    
    <string name="warn_restore_policy_title">Import policy set to RESTORE</string>
    <string name="warn_restore_policy">Your current import policy is set to DELETE ALL CURRENT RECORDS and REPLACE them with the contents of the CSV file. Are you sure?</string>
    
    <string name="menu_settings">Settings</string>
    <string name="csv_file_format">CSV file format</string>
    <string name="select_csv_file_format">Select CSV file format</string>
    <string name="select_encoding">Select encoding</string>
    <string name="default_encoding">Default</string>
    <string name="use_custom_encoding">Use custom encoding (advanced users)</string>
    <string name="preferences_select_csv_file_format">Select a CSV file format</string>
    <string name="preferences_select_import_policy">Select the import policy to use</string>
    
    <!-- File Manager -->
    <string name="filemanager_not_available">No compatible file manager is available.</string>
    <string name="filemanager_get_oi_filemanager">Get OI File Manager</string>
    <string name="filemanager_market_uri">market://search?q=pname:org.openintents.filemanager</string>
    
    <!-- Update -->
	<string name="update_error">Download application not available.</string>
	
    <!-- Preferences -->
    <string name="preference_common">Common settings</string>
    <string name="preference_common_summary">Import/export settings that apply to Notepad and Shopping list.</string>
    <string name="preference_ask_if_file_exists">Ask if file exists</string>
    <string name="preference_ask_if_file_exists_summary">If checked a dialog appears to confirm overwriting if the export file already exists.</string>
    
    <string name="preference_application_specific">Application specific settings</string>
    <string name="preference_filename">Filename</string>
    <string name="preference_filename_summary">Full path for file.</string>
    
    <string name="preference_notepad">OI Notepad</string>
    <string name="preference_notepad_summary">Import/export settings for OI Notepad.</string>
    
    
    <string name="preference_shoppinglist">OI Shopping list</string>
    <string name="preference_shoppinglist_summary">Import/export settings for OI Shopping list.</string>
    
    <!-- Header -->
    <string name="header_subject">Subject</string>
    <string name="header_percent_complete">% Complete</string>
    <string name="header_categories">Categories</string>
    <string name="header_tags">Tags</string>
    
    <!-- Header HandyShopper -->
    <string name="header_need">Need</string>
    
    <!-- File path -->
    <string name="default_notepad_path">/sdcard/notepad.csv</string>
    <string name="default_shoppinglist_path">/sdcard/shoppinglist.csv</string>
    <string name="default_path">/sdcard/output.csv</string>
    
    
<string name="converting">Converting...</string>
<string name="dialog_ok">Ok.</string>
</resources>
