<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:text="@string/file_path"
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="20dip"
	    android:layout_marginBottom="5dip"
		android:textAppearance="?android:attr/textAppearanceMedium"
	    />
    <LinearLayout android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dip"
	    >
	    <EditText android:id="@+id/file_path"
	    	android:text="@string/default_path"
		    android:layout_width="0dip" 
		    android:layout_height="wrap_content" 
		    android:layout_weight="1"/>
		<ImageButton android:id="@+id/file_manager"
			android:src="@drawable/ic_launcher_folder_small"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	</LinearLayout>
	
	<TextView  
		android:id="@+id/convert_info"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="20dip"
	    android:layout_marginBottom="5dip"
	    />
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/file_import"
	        android:text="@string/file_import"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
		<Button android:id="@+id/file_export"
	        android:text="@string/file_export"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	</LinearLayout>
	        
</LinearLayout>
